Specify Node and npm versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "complete-finance-tracker-2020",
+  "version": "0.2.0",
   "private": true,
+  "engines": {
+      "node": "13.x",
+      "npm": "6.13.x"
+    },
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -11,7 +16,6 @@
     "popper.js": "^1.16.0",
     "turbolinks": "^5.2.0"
   },
-  "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.10.1"
   }
